# src/routes/holidayTasks-Routes.js
@@ -6,9 +6,9 @@ const isAuthenticated = require('../utils/isAuthenticated'); // Authentication m
 const router = express.Router();
 
 // Protected Routes
-router.get('/holidayTasks', isAuthenticated, getAllHolidayTasks);  // Requires Authentication
-router.post('/holidayTasks', createHolidayTask); 
-router.put('/holidayTasks/:id', updateHolidayTask); 
-router.delete('/holidayTasks/:id', deleteHolidayTask);  
+router.get('/', isAuthenticated, getAllHolidayTasks);  // Requires Authentication
+router.post('/', createHolidayTask); 
+router.put('/:id', updateHolidayTask); 
+router.delete('/:id', deleteHolidayTask);  
 
 module.exports = router;
